<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/progresslogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="48dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnSignIn"
            android:text="@string/login_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/yellowBg"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_text"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnCreateAccLogin"
            android:text="@string/createAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/yellowBg"
            android:background="@android:color/transparent"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>