<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    android:padding="18dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/self_gratitude_journal"
        android:textSize="30sp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:cardElevation="6dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"> <!-- for shadow bellow -->

            <TextView
                android:id="@+id/tvGratefulText"
                android:layout_gravity="center"
                android:text="@string/gratefultext"
                android:textSize="19sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/yellowBg"
        android:background="@android:color/transparent"
        android:text="@string/getStarted">

    </Button>

</LinearLayout>